--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -21,3 +21,43 @@ img{
 }
         
 }
+
+.played-card{
+
+    transform: scale(1.3) translateX(250px) translateY(-80px) rotate(10deg);
+    right: 25px;
+}
+
+.pick-card{
+ 
+    animation: pick-card-animation 1s ease-in-out;
+    transform: scale(1.3) translateX(250px) translateY(-80px) rotate(10deg);
+   
+}
+
+@keyframes pick-card-animation{
+  0%{ transform: scale(1);
+
+  }
+
+  30% { transform: scale(1.7);
+
+  }
+
+  60%{ transform: scale(1.7);
+
+  }
+
+  100%{ transform: scale(1.3) translateX(250px) translateY(-80px) rotate(10deg);
+
+  }
+}
+
+
+.player-position{
+
+    position: absolute;
+    right: 0;
+
+}
+
