--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,6 +1,12 @@
 
-<app-player style="top: 130px"
-        class="player-position">
+
+
+
+<app-player *ngFor ="let player of game.players let i = index;" 
+[ngStyle] ="{'top.px': 100 + ( i * 90)}" 
+[playerActive] ="i == game.currentPlayer"
+[name] ="player"
+        class ="player-position">
     </app-player>
 
 
@@ -8,16 +14,24 @@
 <div class="field">
 
     <div class="card-stack">
-        <img *ngFor="let card of [0, 1, 2, 3, 4, 5]; let i = index;" [ngStyle]="{'right.px': i * 5}"
-            src="/assets/img/card_cover.png" alt="">
-        <img (click) ="takeCard()"  class="top-card" style="right: 25px;" 
+        <img *ngFor ="let card of [0, 1, 2, 3, 4, 5]; let i = index;"  [ngStyle] ="{'right.px': i * 5}"
+            src="/assets/img/card_cover.png" alt="" style="width: 200px; "> 
+        <img (click) ="takeCard()"  class="top-card" style="right: 30px; width: 200px" 
             src="/assets/img/card_cover.png" alt="">
 
         <img *ngFor ="let card of game.playedCards" class="played-card" src="/assets/img/{{ card }}.png" alt="">
 
-        <img (click) ="takeCard()" *ngIf ="pickCardAnimation"  class="pick-card" style="right: 25px;" 
+        <img (click) ="takeCard()" *ngIf ="pickCardAnimation"  class="pick-card" style="right: 30px;" 
             src="/assets/img/{{ currentCard }}.png" alt="">
 
         
     </div>
+
 </div>
+
+<app-game-description [card] ="currentCard " class="game-info"></app-game-description>
+
+<button mat-fab color="primary" (click) ="openDialog()" class="add-button " >
+    <mat-icon>add</mat-icon>
+  </button>
+
