--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -17,7 +17,7 @@
        
 img{
     position: absolute;
-    width: 120px;
+    width: 100px;
 }
         
 }
@@ -61,3 +61,16 @@ img{
 
 }
 
+.add-button{
+
+    position: absolute;
+    right: 40px;
+    bottom: 40px;
+}
+
+.game-info{
+    position: absolute;
+    bottom: 40px;
+    left: 150px;
+    right: 150px;
+}
