--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,5 +1,5 @@
-<div class="player" >
-    <img src="assets/img/profiles/profile_1.png">
-    <span>Name</span>
+<div class="player" [class.player-active] ="playerActive">
+    <img src="/assets/img/clubs-player.png">
+    <span>{{ name }}</span>
     <!-- <span>{{ name }}</span> -->
 </div>
