--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -3,7 +3,7 @@
     width: 300px;
     display: flex;
     align-items: center;
-    background-color: rgb(211, 231, 31);
+    background-color: rgb(119, 103, 82, 0.4);
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
     word-break: break-all;
@@ -14,8 +14,12 @@
     }
 
     img {
-        width: 100px;
-        height: 100px;
+        width: 50px;
+        height: 50px;
         border-radius: 100%;
     }
+}
+
+.player-active{
+    background-color: rgba(119, 103, 82,) !important;
 }
