--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -1,5 +1,6 @@
 <div class="start-screen">
-<img  src="assets/img/Präsentation1.jpg" alt="">
+<img  src="assets/img/Start-Bild.png" alt="">
+
 
     <div class ="start-label-box">
 
