First playable version

--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -4,6 +4,7 @@
 
     <div class ="start-label-box">
 
+        <!-- //startGame-Butten -->
         <img (click)="newGame()" src="assets/img/Bild3.png" alt="">
     
     </div>
