--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -2,7 +2,7 @@
 
 
 
-<app-player *ngFor ="let player of game.players let i = index;" 
+<app-player *ngFor ="let player of game.players; let i = index;" 
 [ngStyle] ="{'top.px': 100 + ( i * 90)}" 
 [playerActive] ="i == game.currentPlayer"
 [name] ="player"
@@ -14,14 +14,14 @@
 <div class="field">
 
     <div class="card-stack">
-        <img *ngFor ="let card of [0, 1, 2, 3, 4, 5]; let i = index;"  [ngStyle] ="{'right.px': i * 5}"
+        <img *ngFor ="let card of [0, 1, 2, 3, 4]; let i = index;"  [ngStyle] ="{'right.px': i * 5}"
             src="/assets/img/card_cover.png" alt="" style="width: 200px; "> 
-        <img (click) ="takeCard()"  class="top-card" style="right: 30px; width: 200px" 
+        <img (click) ="takeCard()"  class="top-card" style="right: 25px; width: 200px" 
             src="/assets/img/card_cover.png" alt="">
 
         <img *ngFor ="let card of game.playedCards" class="played-card" src="/assets/img/{{ card }}.png" alt="">
 
-        <img (click) ="takeCard()" *ngIf ="pickCardAnimation"  class="pick-card" style="right: 30px;" 
+        <img (click) ="takeCard()" *ngIf ="pickCardAnimation"  class="pick-card" style="right: 25px;" 
             src="/assets/img/{{ currentCard }}.png" alt="">
 
         
@@ -29,7 +29,7 @@
 
 </div>
 
-<app-game-description [card] ="currentCard " class="game-info"></app-game-description>
+<app-game-info [card] ="currentCard" class="game-info"></app-game-info>
 
 <button mat-fab color="primary" (click) ="openDialog()" class="add-button " >
     <mat-icon>add</mat-icon>
