--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -3,6 +3,7 @@
     height: 100vh;
     max-width: 100%;
     background-image: url("/assets/img/card-stack.png");
+    background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -66,6 +67,8 @@ img{
     position: absolute;
     right: 40px;
     bottom: 40px;
+    background-color: rgb(169,150,116);
+  
 }
 
 .game-info{
@@ -73,4 +76,7 @@ img{
     bottom: 40px;
     left: 150px;
     right: 150px;
+    border-radius: 10px;
+   
+
 }
