--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,5 +1,6 @@
 <div class="player" [class.player-active] ="playerActive">
-    <img src="/assets/img/clubs-player.png">
+    <img src="/assets/img/{{ image }}">
     <span>{{ name }}</span>
-    <!-- <span>{{ name }}</span> -->
 </div>
+
+
