--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -1,23 +1,32 @@
 
 .player {
-    width: 300px;
+    width: 200px;
     display: flex;
     align-items: center;
-    background-color: rgb(119, 103, 82, 0.4);
+    background-color: rgba(119, 103, 82, 0.5);
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
-    word-break: break-all;
 
-    span {
-        font-size: 30px;
-        margin-left: 16px;
-    }
+    
 
     img {
-        width: 50px;
-        height: 50px;
-        border-radius: 100%;
+        width: 45px;
+        height: 45px;
+        padding: 10px;
+        object-fit: cover;
+    
     }
+
+
+
+    span {
+        font-size: 20px;
+        margin-left: 16px;
+        // color: white;
+       
+
+    }
+
 }
 
 .player-active{
